--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -7,7 +7,14 @@
 }
 
 .header {
+  display: grid;
+  grid-template-rows: 0.5fr 5fr;
   height: 100%;
+  overflow: auto;
+  width: 100%;
+}
+
+.aside {
   overflow: auto;
 }
 
